fixed overflow and header hidden on smaller screen

--- a/src/components/pages/about.css
+++ b/src/components/pages/about.css
@@ -7,7 +7,8 @@
   color: white;
   text-align: center;
   margin-top: 200px;
-  /* margin-bottom: 500px; */
+  position: relative;
+  z-index: 3;
 }
 
 .about-header h1 {
@@ -23,7 +24,7 @@
 
 .about-images {
   display: flex;
-  margin-bottom: 400px;
+  margin-bottom: -180px;
 }
 
 .blue {
@@ -35,9 +36,9 @@
 }
 
 .red {
-  position: absolute;
-  top: 47%;
-  left: 40%;
+  position: relative;
+  bottom: 90px;
+  left: 44%;
   z-index: 2;
   transform: rotate(-43.35deg);
   width: 100%;
