--- a/src/components/pages/docs.css
+++ b/src/components/pages/docs.css
@@ -7,6 +7,8 @@
   color: white;
   text-align: center;
   margin-top: 200px;
+  position: relative;
+  z-index: 3;
 }
 
 .docs-header h1 {
@@ -21,7 +23,7 @@
 }
 
 .docs-images {
-  margin-top: 300px;
+  margin-bottom: -200px;
 }
 
 .docs-details {
